[package]
name = "cienli"
version = "0.1.1"
authors = ["Zola Gonano <zolagonano@protonmail.com>"]
edition = "2018"
description = "CiEnLi is a library of historical ciphers implemented in rust"
homepage = "https://github.com/zolagonano/cienli.git"
repository = "https://github.com/zolagonano/cienli.git"
keywords = ["cipher", "crypto", "encryption", "caesar"]
categories = ["algorithms", "cryptography"]
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cienli"

[dependencies]
regex = "1.4.2"
