[package]
name = "cienli"
version = "0.3.0"
authors = ["Zola Gonano <zolagonano@protonmail.com>"]
edition = "2018"
description = "CiEnLi is a library of historical ciphers implemented in rust"
homepage = "https://github.com/zolagonano/cienli.git"
repository = "https://github.com/zolagonano/cienli.git"
keywords = ["cipher", "crypto", "encryption", "caesar"]
categories = ["algorithms", "cryptography"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/cienli/"

[lib]
name = "cienli"

[dependencies]
regex = "1.4.2"
num-integer = "0.1"
