[package]
name = "cienli"
version = "0.3.1"
authors = ["Zola Gonano <zolagonano@protonmail.com>"]
edition = "2018"
description = "CiEnLi is a library of historical ciphers implemented in rust"
homepage = "https://github.com/zolagonano/cienli.git"
repository = "https://github.com/zolagonano/cienli.git"
keywords = ["cipher", "crypto", "encryption", "caesar"]
categories = ["algorithms", "cryptography"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/cienli/"

[lib]
name = "cienli"

[dependencies]
regex = { version = "1.5.4", optional = true}
num-integer = { version = "0.1", optional = true }

[features]
affine = ["dep:num-integer"]
atbash = []
bacon = ["dep:regex"]
caesar = []
polybius_square = []
rot = []
scytale = []
vigenere = []
xor = []
default = ["affine", "atbash", "bacon", "caesar", "polybius_square", "rot", "scytale", "vigenere", "xor"]
